Prevents two crashes because of dangling pointers when NM stops.

BUG: 254070