libs/service/wirelessnetworkinterfaceactivatableprovider.cpp
@@ -197,7 +197,9 @@ void WirelessNetworkInterfaceActivatableProvider::handleRemove(Knm::Connection *
     // try to create a WirelessNetwork - this will do nothing if other connections for this network
     // still exist
     Knm::WirelessSetting * wirelessSetting = dynamic_cast<Knm::WirelessSetting *>(removedConnection->setting(Knm::Setting::Wireless));
-    if (wirelessSetting) {
+    // d->interface may be null if NM has just stopped and this provider has not been unregistered yet.
+    // d->environment is a child of d->interface, so it is a valid pointer in that situation.
+    if (wirelessSetting && d->interface) {
         if (d->environment->networks().contains(wirelessSetting->ssid())) {
             networkAppeared(wirelessSetting->ssid());
         }
